--- a/biodata.css
+++ b/biodata.css
@@ -15,13 +15,14 @@ body{
 
 .logo{
     cursor: pointer;
-    width: 250px;
+    width: 200px;
     margin-right: auto;
     float: left;
+    margin-top: -10px;
 }
 
 .navbar  li, a.menubar{
-    font-size: 20px;
+    font-size: 15px;
     color:white;
     text-decoration: none;
     font-weight: bolder;
@@ -33,7 +34,7 @@ body{
 
 ul.nav_bar{
     list-style-type: none;
-    margin-left: 500px;
+    margin-left: 200px;
     padding: 0;
     overflow: hidden;
 }
@@ -46,11 +47,10 @@ li a.menubar{
 }
 
 header{
-    padding: 30px 10%;
+    padding: 40px 10%;
     background-color:#D6001C;
     box-shadow: 0px 3px #FA8003;
     margin-right: 0;
-    width: 100%;
 }
 
 .nav_bar{
@@ -59,10 +59,9 @@ header{
 }
 
 .nav_bar li {
-    display: inline-block;
+    float: left;
     padding: 0px 25px;
 }
-
 
 .ordernow{
     padding : 15px 30px;
@@ -72,9 +71,11 @@ header{
     border: none;
     border-radius: 90px;
     width: 200px;
-    float:right;
-    margin-right: -130px;
-    margin-top: -50px;
+    position: absolute;
+    right: 0;
+    top:0;
+    margin-right: 30px;
+    margin-top: 40px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
