--- a/indexcss.css
+++ b/indexcss.css
@@ -64,6 +64,7 @@ header{
     box-shadow: 0px 3px #FA8003;
     margin-left: -30px;
     margin-right: 0;
+    width: 100%;
 }
 
 .nav_bar{
@@ -72,15 +73,8 @@ header{
 }
 
 .nav_bar li {
-    display: inline-block;
+    float: left;
     padding: 0px 25px;
-}
-
-a.menubar .ordernow{
-    float:right;
-    display: inline;
-    margin-right: -30px;
-    margin-top: -65px;
 }
 
 .ordernow{
@@ -91,7 +85,11 @@ a.menubar .ordernow{
     border: none;
     border-radius: 90px;
     width: 100px;
-    display: inline-block;
+    position: absolute;
+    right: 0;
+    top:0;
+    margin-right: 30px;
+    margin-top: 20px;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
